--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
   <body>
     <h1>Dev</h1>
   </body>
+  <script>
+    for (let index = 0; index < 1500; index++) {
+      document.write(`<h2>${index.toString().padStart(2, "0")}</h2>`);
+    }
+  </script>
 </html>
