--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dev</title>
+    <title>Site de Linhares</title>
   </head>
   <body>
-    <h1>Dev</h1>
+    <h1>Bem vindo ao site de Linhares</h1>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi mollitia
+    deleniti obcaecati adipisci nihil illum sint quae fuga reiciendis
+    exercitationem beatae suscipit, eveniet accusantium pariatur praesentium?
+    Error eaque doloribus distinctio. Lorem, ipsum dolor sit amet consectetur
+    adipisicing elit. Debitis qui exercitationem laborum minima repellat
+    laudantium id sequi ex cum rem quibusdam fugit culpa recusandae assumenda
+    eligendi consectetur, rerum hic mollitia.
   </body>
-  <script>
-    for (let index = 0; index < 1500; index++) {
-      document.write(`<h2>${index.toString().padStart(2, "0")}</h2>`);
-    }
-  </script>
 </html>
