--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     adipisicing elit. Debitis qui exercitationem laborum minima repellat
     laudantium id sequi ex cum rem quibusdam fugit culpa recusandae assumenda
     eligendi consectetur, rerum hic mollitia.
-    <img src="imagens/20231213_150744.jpg" alt="" />
+
+    <h4>Por: WEDER XAVIER ASSIS</h4>
   </body>
 </html>
